# pixiv-omina-singleDownload

./: .gitignore  BOOKMARK_FIX_SUMMARY.md  COMPLETE_WORKFLOW.md  CPP_DOWNLOADER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE-3RD-PARTY.txt  QUICKSTART-bookmark-extractor.md  README-bookmark-extractor.md  README.md  README_zh-CN.md  _codeql_detected_source_root  bookmark-url-extractor.js  cookie.example  package-lock.json  package.json  pixivOpener.html
.github/workflows/: build-cpp-downloader.yml  release.yml
cpp-downloader/: CMakeLists.txt  IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  build.bat  urls.example.txt  vcpkg.json
cpp-downloader/include/: arg_parser.h  database.h  http_client.h  pixiv_downloader.h
cpp-downloader/src/: arg_parser.cpp  database.cpp  http_client.cpp  main.cpp  pixiv_downloader.cpp
docs/: BOOKMARK_DOWNLOADER.md  BOOKMARK_IMPLEMENTATION.md  BOOKMARK_VISUAL_GUIDE.md  RELEASE.md
src/locales/en/: messages.json
src/locales/zh_CN/: messages.json
src/main/: Application.js
src/main/modules/Downloader/: DownloadAdapter.js  DownloadManager.js
src/main/modules/Downloader/Providers/: index.js
src/main/modules/Downloader/Providers/Pixiv/: BookmarkPageProvider.js  BookmarkProvider.js  BookmarkUrlProvider.js
src/main/modules/Downloader/WorkDownloader/Pixiv/: BookmarkPageDownloader.js  BookmarkUrlDownloader.js  GeneralArtworkDownloader.js
src/main/settings/: default.settings.js
src/renderer/components/dialogs/: DownloadSettings.vue
src/utils/: UrlBuilder.js  UrlMatcher.js
